Ensure nav menu stays on top when on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -163,7 +163,6 @@ pre {
     margin-left: auto;
     padding-right: $spacing-unit;
     padding-left: $spacing-unit;
-    position: relative;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
