--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -21,13 +21,19 @@
     &,
     &:visited {
         color: $grey-color-dark;
+
+        @include media-query($on-palm) {
+            a {
+                margin-right: $spacing-unit;
+            }
+        }
     }
 }
 
 .site-nav {
     line-height: 56px;
 
-    .menu-icon {
+    .nav-trigger, .menu-icon {
         display: none;
     }
 
@@ -50,6 +56,15 @@
         border-radius: 5px;
         text-align: right;
 
+        label[for="nav-trigger"] {
+            display: block;
+            float: right;
+            width: 36px;
+            height: 36px;
+            z-index: 2;
+            cursor: pointer;
+        }
+
         .menu-icon {
             display: block;
             float: right;
@@ -69,12 +84,12 @@
             }
         }
 
-        .trigger {
+        input ~ .trigger {
             clear: both;
             display: none;
         }
 
-        &:hover .trigger {
+        input:checked ~ .trigger {
             display: block;
             padding-bottom: 5px;
         }
